[gd_scene load_steps=11 format=2]

[ext_resource path="res://laserRed01.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.40596
height = 47.943

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.260355, 0.609467, 1 )
colors = PoolColorArray( 0.671875, 0, 0, 1, 0.59375, 0.3479, 0, 1, 0.78125, 0.311279, 0, 1, 0.367188, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.0789474, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 4, 3, 8 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
angular_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 1.0
angle_curve = SubResource( 3 )
scale = 8.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="Bullet" type="Node2D"]

[node name="Bullet" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
position = Vector2( -0.353554, 2.38419e-07 )
rotation = 1.57363
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bullet"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Bullet"]
position = Vector2( -19.2355, 0.10511 )
amount = 50
process_material = SubResource( 8 )

[connection signal="area_entered" from="Bullet" to="Bullet" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Bullet" to="Bullet" method="_on_Bullet_body_entered"]
[connection signal="tree_entered" from="Bullet" to="Bullet" method="_on_Area2D_tree_entered"]
